--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FoodDeliveryApp</string>
+    <string name="menu_home">홈</string>
+    <string name="menu_my">MY</string>
 </resources>
