--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="can_not_assigned_permission">권한을 받지 못했습니다.</string>
 
     <string name="can_not_load_address_info">위치 정보를 불러올 수 없습니다.</string>
+    <string name="location_not_found">위치 정보없음</string>
 
     <string name="initialize">초기화</string>
     <string name="fast_delivery">배달 빠른 순</string>
