--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,9 @@
 
     <!-- Image Preview -->
     <string name="images_page">(%d/%d)</string>
+    <string name="basket_button_content_description">basket_button</string>
+    <string name="call">전화</string>
+    <string name="delivery_time_text">배달시간</string>
+    <string name="delivery_tip_text">배달팁</string>
+    <string name="restaurant_image_content_description">restaurant_image</string>
 </resources>
