--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="delivery_time_text">배달시간</string>
     <string name="delivery_tip_text">배달팁</string>
     <string name="restaurant_image_content_description">restaurant_image</string>
+    <string name="profileImageVIewContent">profile_image_view</string>
 </resources>
