--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <string name="delivery_tip_text">배달팁</string>
     <string name="restaurant_image_content_description">restaurant_image</string>
     <string name="profileImageVIewContent">profile_image_view</string>
+    <string name="remove_button_description">삭제 버튼</string>
+    <string name="food_image_description">음식 사진</string>
 </resources>
